crates/icydb-core/tests/ui/logical_plan_private.stderr
error[E0603]: struct `LogicalPlan` is private
 --> tests/ui/logical_plan_private.rs:1:34
  |
1 | use icydb_core::db::query::plan::LogicalPlan;
  |                                  ^^^^^^^^^^^ private struct
  |
note: the struct `LogicalPlan` is defined here
 --> src/db/query/plan/mod.rs
  |
  | pub(crate) use logical::LogicalPlan;
  |                ^^^^^^^^^^^^^^^^^^^^
help: import `LogicalPlan` directly
  |
1 | use icydb_core::db::query::plan::logical::LogicalPlan;
  |                                  +++++++++
